--- a/src/containers/HomePage/BottomBox.css
+++ b/src/containers/HomePage/BottomBox.css
@@ -29,7 +29,7 @@
     height: 18px;
     width: 18px;
     margin: -7.5px 0 0 -9px;
-    background-image: url("https://quantic.mba/assets/vectors/horizontal_rule_diamond_beige-3a421482.svg");
+    background-image: url("https://aqualic.blob.core.windows.net/image/diamon.svg");
 }
 
 .bottombox-text{
@@ -56,7 +56,7 @@
     width: 246px;
     height: 190px;
     background-size: 100%;
-    background-image: url("https://quantic.mba/assets/images/certificate_light_quantic-8dcb4d40.png");
+    background-image: url("https://aqualic.blob.core.windows.net/image/certificate_light_quantic.png");
 }
 .trophy{
     position: absolute;
